# alloy-multicall

./: Cargo.toml  README.md
examples/: get_amount_out.rs  simple_erc20.rs  simple_trc20.rs
src/: contract.rs  error.rs  middleware.rs  multicall_address.rs
