[package]
name = "alloy-multicall"
version = "0.9.2"
authors = ["Corn3333"]
license = "MIT"
edition = "2021"
readme = "./README.md"
repository = "https://github.com/Corn3333/alloy-multicall"
homepage = "https://github.com/Corn3333/alloy-multicall"
description = """
Multicall for everyone.
"""


[dependencies]
thiserror = "2.0.0"
alloy = { version = "0.9.2", default-features = false, features = [
    "contract",
    "providers",
    "std",
] }
alloy-chains = "0.1.53"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
alloy = { version = "0.9.2", default-features = false, features = [
    "contract",
    "providers",
    "reqwest-rustls-tls",
    "std",
] }
